test/files/neg/source3cross.scala
//> using options -Xsource:3-cross

object T {
  def f(a: Any) = a + ""
}
