test/files/neg/source3cross.check
source3cross.scala:4: error: value + is not a member of Any
  def f(a: Any) = a + ""
                    ^
1 error
